--- a/index.css
+++ b/index.css
@@ -84,5 +84,11 @@
   .table, .table td, .table th, .table tr {
     border: 1px solid #CCCCCC;
     border-collapse: collapse;
-  }}
+  }
+  .demoVideo {
+      max-height: 700px;
+  }
+  .link:hover {
+      cursor: pointer;
+  }
 }
